# pylint-plugin

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  cspell.config.yaml  dictionary.txt  package.json  pnpm-lock.yaml  pyproject.toml
src/: main.py
src/checkers/: __init__.py  _register.py  frozenset_constant.py  module_const_naming.py  no_docstrings.py  no_file_level_disable.py  no_inline_imports.py  no_relative_imports.py  require_final.py  smoke.py  test_aaa_markers.py  test_no_blank_lines.py  unused_arg_use_del.py  use_contextlib_suppress.py
tests/: conftest.py  test_main.py
tests/checkers/: test_frozenset_constant.py  test_module_const_naming.py  test_no_docstrings.py  test_no_file_level_disable.py  test_no_inline_imports.py  test_no_relative_imports.py  test_require_final.py  test_smoke.py  test_test_aaa_markers.py  test_test_no_blank_lines.py  test_unused_arg_use_del.py  test_use_contextlib_suppress.py
